--- a/app/src/tailwindcss.css
+++ b/app/src/tailwindcss.css
@@ -1048,6 +1048,10 @@ html {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.border {
+  border-width: 1px;
+}
+
 .p-7 {
   padding: 1.75rem;
 }
@@ -1055,6 +1059,26 @@ html {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .text-center {
@@ -1082,5 +1106,10 @@ html {
 @media (min-width: 768px) {
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
